# vemcache

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: docker-publish.yml
docs/: CNAME  README.md
src/: commands.rs  handlers.rs  main.rs  vemcache.rs
test/: load_db.py  work_db.py
